[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/tilesets/tileset_arena_elements.png" type="Texture" id=1]
[ext_resource path="res://game/arena/elements/StartLights.gd" type="Script" id=2]
[ext_resource path="res://assets/sound/sfx/race_start_beep___f1-starting-lights-sound-download_audio_best.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[node name="StartLights" type="Node2D"]
modulate = Color( 1, 1, 1, 0.7 )
z_index = 4
script = ExtResource( 2 )

[node name="Light1" type="Sprite" parent="."]
position = Vector2( -24, 0 )
texture = SubResource( 1 )

[node name="Light2" type="Sprite" parent="."]
texture = SubResource( 1 )

[node name="Light3" type="Sprite" parent="."]
position = Vector2( 24, 0 )
texture = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="CountdownA" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "GameSfx"

[node name="CountdownB" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 5.0
pitch_scale = 1.3
bus = "GameSfx"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
